fix: typo change

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -3,6 +3,7 @@
         color: #0b4c8c;
         margin-bottom: 2.4rem;
         position: relative;
+        font-size: 1.9rem;
     }
     .header::after{
         content: "";
