--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@
 // scss-docs-start theme-color-variables
 $primary: #0b4c8c;
 $info: #808080;
-$success: #50cd89;
+$success: #0ea050;
 $secondary: #0092cb;
 $warning: #fd8901;
 $danger: #ff5c00;
