--- a/scss/home.scss
+++ b/scss/home.scss
@@ -224,3 +224,28 @@ footer {
         }
     }
 }
+
+
+.gallery .flex{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 30px;
+    }
+    
+    .gallery .flex img{
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+    }
+    .frame{
+        border: #2e1a12 solid 8px;
+        box-shadow: 0px 0px 5px 0px #AAA;
+        -moz-box-shadow: 0px 0px 5px 0px #AAA;
+        -webkit-box-shadow: 0px 0px 5px 0px #AAA;
+        transition: all 0.5s ease 0s;
+        -ms-transition: all 0.5s ease 0s;
+        -moz-transition: all 0.5s ease 0s;
+        -webkit-transition: all 0.5s ease 0s;
+        -o-transition: all 0.5s ease 0s;
+        border-image: url('https://media.istockphoto.com/photos/laminate-wooden-floor-texture-background-picture-id1083302826?b=1&k=20&m=1083302826&s=612x612&w=0&h=CDbqjuW5xuIcbk9QSyNN7WaprOALN-JPcLADxZyZdBk=') 30;
+      }
