--- a/css/home.css
+++ b/css/home.css
@@ -162,6 +162,9 @@ html {
   position: absolute;
   top: 40px;
   left: 60px;
+  border: 2px solid rgb(250, 250, 250);
+  border-radius: 10px;
+  overflow: hidden;
 }
 /* .img1-hall {
   height:"170";
